Closed
Bug 722265
Opened 14 years ago
Closed 12 years ago
Column header selection popup no longer exposed to accessibility APIs
Categories
(Thunderbird :: Disability Access, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 24.0
People
(Reporter: Jamie, Assigned: surkov)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
7.86 KB,
patch
|
tbsaunde
:
review+
|
Details | Diff | Splinter Review |
The popup used to select columns to display is no longer exposed to accessibility APIs. Although the button to access the popup can't be focused or activated from the keyboard (bug 370437), it was previously possible to find and activate the accessible for this button, thereby displaying the popup. The popup was then accessible via the keyboard and exposed information to accessibility APIs, thus allowing a screen reader user to toggle column visibility. Now, even after the button is activated, the popup does not expose any accessibles at all.
Str:
1. Click the button labelled "Click to select columns to display" in the message list column headers.
2. Press downArrow.
Expected: The selected column item should receive focus according to accessibility APIs.
Actual: Nothing is communicated via accessibility APIs.
This worked in Thudnerbird 3.1.18. It does not work in trunk. I'm not yet sure where it broke after 3.1.18.
I'm not sure whether this is a core -> disability access APIs bug, so I've put it here initially.
Comment 1•14 years ago
|
||
This sounds to me like another case of the problem in bug 673860.
Assignee | ||
Updated•14 years ago
|
Blocks: treeupdatea11y
Reporter | ||
Comment 2•14 years ago
|
||
Unfortunately, this is not fixed by bug 656225, which suggests it's not another instance of bug 673860.
Assignee | ||
Comment 3•14 years ago
|
||
Can anybody extract guilty XUL for me please?
![]() |
||
Comment 4•13 years ago
|
||
Could this be put into the View menu options?
Assignee | ||
Comment 5•13 years ago
|
||
(In reply to Liz Henry :lizzard from comment #4)
> Could this be put into the View menu options?
this would do a job for particular app but we'd need to fix it in general way
Assignee | ||
Comment 6•13 years ago
|
||
XUL button doesn't allow any children if this not a menu button. XUL tree uses xul:treecolumnpicker which is not recognized as a menu button. Similar to bug 787858 and MustPrune problem. While this one can have a trivial fix (treat treecolumnpicker as a menu button) but we deal here with a more general problem.
Assignee | ||
Comment 7•12 years ago
|
||
allow menupopup under any XUL button
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #763385 -
Flags: review?(trev.saunders)
Updated•12 years ago
|
Attachment #763385 -
Flags: review?(trev.saunders) → review+
Assignee | ||
Comment 8•12 years ago
|
||
Flags: in-testsuite+
![]() |
||
Comment 9•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 24.0
You need to log in
before you can comment on or make changes to this bug.
Description
•