Bug 722265 - Column header selection popup no longer exposed to accessibility APIs, r=tbsaunde